# documentation

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  common.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_articles_tags.py  0003_alter_contentarticle_content_title.py
documentation/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ArticleItem.tsx  Button.tsx  Categories.tsx  LeftNav.tsx  Navigation.tsx  Search.tsx  SortPopup.tsx  Tag.tsx  Tags.tsx
frontend/src/hooks/: useActions.ts
frontend/src/pages/: ArticlePage.tsx  Instructions.tsx
frontend/src/store/: articlesSlice.ts  filtersSlice.ts  navigationSlice.ts  store.ts
frontend/src/styles/: article-item.module.css  article-page.module.css  button.module.css  categories.module.css  left-nav.module.css  navigation.module.css  search.module.css  sort-popup.module.css  tag.module.css
frontend/src/types/: articles.types.ts  filters.types.ts  nav.types.ts
